syntax = "proto3";
package user;
import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option (gogoproto.goproto_enum_prefix_all) = false;
option (gogoproto.goproto_getters_all) = false;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.marshaler_all) = true;
option (gogoproto.sizer_all) = true;

service UserService {

    rpc Signup (SignupReq) returns (SignupRep) {
    }

    rpc Edit (EditReq) returns (EditRep) {
    }

    rpc Login (LoginReq) returns (LoginRep) {
    }

    rpc Logout (LogoutReq) returns (LogoutRep) {
    }

    rpc GetUser (GetReq) returns (User) {
    }
}

// The request message containing the user's name.
message User {
    uint64 ID = 1 [(gogoproto.moretags) = "gorm:\"primary_key\""];
    string name = 2 [(gogoproto.moretags) = "gorm:\"type:varchar(100)\" validate:\"required\""];
    string activatedAt = 3 [(gogoproto.moretags) = "gorm:\"type:varchar(100)\""];
    string account = 4;
    string password = 5;
    string email = 6;
    string phone = 7;
    string sex = 8;
    string birthday = 9 ;
    string introduction = 10;
    uint64 score = 11;
    string signature = 12;
    uint32 role = 13;
    string avatarURL = 14;
    string coverURL = 15;
    string address = 16;
    string location = 17;
    string updatedAt = 18 ;
    string bannedAt = 19 ;
    string createdAt = 20 ;
    string lastActivatedAt = 21 ;
    string lastName = 22;
    uint32 status = 23;
}

message Resume {
    uint64 ID = 1;
    uint32 kind = 2;
    string school = 3;
    string speciality = 4;
    string startTime = 5 ;
    string endTime = 6 ;
    uint64 userID = 7;
    uint32 status = 8;
}

message GetReq {
    uint64 ID = 1;
}

message SignupReq {
    string name = 2;
    string password = 4;
    string email = 5;
    string phone = 6;
}

message SignupRep {
    // code
    int32 code = 1;
    // msg
    string msg = 2;

    User data = 3;
}

message LoginReq {
    string input = 1;
    string password = 2;
}

message EditReq {
    uint64 ID = 1;
}

message EditRep {
    uint64 ID = 1;
}

message LoginRep {
    string token = 1;
    User user = 2;
    string msg = 3;
}

message LogoutReq {
    uint64 ID = 1;
}

message LogoutRep {
    string msg = 1;
}
